@@ -23,6 +23,7 @@
 * Cybersource: Add check support [bowmande]
 * Moneris: Use a capture of $0 for void [ntalbott]
 * PayPal Express integration: Fix received_at time zone [ntalbott]
+* NAB Transact: Add refund capability [nagash]
 
 == Version 1.29.3 (December 7, 2012)
 
